# voxel-game

./: .gitattributes  .gitignore  AGENT_README.md  CLAUDE.md  CMakeLists.txt  Doxyfile  FUTURE.md  ISSUES.md  README.md  REVIEW.md  WORLD_GEN_AGENT_TIPS.md  logictest.out.txt  selftest.out.txt  skills-lock.json
.claude/skills/blockbench-mcp-overview/: SKILL.md
.claude/skills/code-index/: SKILL.md
.claude/skills/vulkan-compute/: .skillfish.json
.github/workflows/: code-index.yml
assets/: README.md  biomes.yaml  blocks.yaml  clouds.yaml  colors.yaml  items.yaml  recipes.yaml  sky.yaml  textures.yaml  world.yaml  world1.yaml
assets/colorpalettes/: README.md  dmc-to-rgb-conversion-part-1.hex  doctor-robotniks-ring-racers-palette.hex  gameboy.hex  macintosh-8-bit-system-palette.hex  pico8.hex  sega-cube.hex  slso8.hex  sweetie16.hex
assets/features/: birch_tree.yaml  boulder.yaml  bush.yaml  cactus.yaml  cairn.yaml  clay_blob.yaml  cliff_rubble.yaml  crystal_cluster.yaml  geode.yaml  grass_flowers.yaml  lantern.yaml  lily_pad.yaml  maple_tree.yaml  mushroom_ring.yaml  oak_tree.yaml  pillar.yaml  pine_tree.yaml  rock_spire.yaml  rock_varied.yaml  rune_totem.yaml  shore_reeds.yaml  spiral_pillar.yaml  stone_arch.yaml  well.yaml  willow_tree.yaml
assets/models/critter/: critter.bbmodel
assets/models/hammer/: hammer.bbmodel
assets/models/hand/: hand.bbmodel
assets/models/pickaxe/: pickaxe.bbmodel
assets/models/sword/: sword.bbmodel
assets/models/torch/: torch.bbmodel
assets/particles/: break.prtcl  ember.prtcl  new_effect.prtcl  place.prtcl  splash.prtcl
assets/structures/: boulder.yaml  pillar.yaml  well.yaml
docs/: AGENT_README.md  CODE_INDEX.md  CODE_INDEX_GUIDE.md  CONFIGURATION.md  FUTURE.md  GPU_DRIVEN_RENDERING.md  STREAMING.md  TOOLING.md  WORLDGEN.md  WORLDGEN_TODO.md
docs/index/: SYMBOLS.md  manifest.json  symbols.json  symbols.tags
scripts/: color_names.txt  gen_colors.py  gen_cracks.py  gen_hammer.py  gen_icons.py  gen_textures.py  gen_ui.py
scripts/hooks/: pre-commit
shaders/: README.md  chunk.frag  chunk.vert  chunk_cull.comp  chunk_indirect.vert  composite.frag  composite.vert  entity.frag  entity.vert  farterrain.frag  farterrain.vert  sky.frag  sky.vert  ui.frag  ui.vert
src/: main.cpp
src/clouds/: CloudNoise.cpp  CloudNoise.h  CloudSystem.cpp  CloudSystem.h  README.md  WeatherMap.cpp  WeatherMap.h
src/core/: App.cpp  App.h  AppUi.cpp  ColorPalette.cpp  ColorPalette.h  DayNight.cpp  DayNight.h  Input.cpp  Input.h  Palette.cpp  Palette.h  README.md  Settings.cpp  Settings.h  ShapePicker.h  Ui.cpp  Ui.h  Window.cpp  Window.h
src/entity/: Armature.cpp  Armature.h  BlockbenchModel.cpp  BlockbenchModel.h  Critters.cpp  Critters.h  ItemEntity.cpp  ItemEntity.h  Particles.cpp  Particles.h  README.md
src/player/: Camera.cpp  Camera.h  ChestStore.cpp  ChestStore.h  Crafting.cpp  Crafting.h  Equipment.h  Inventory.cpp  Inventory.h  PlayerController.cpp  PlayerController.h  PlayerSave.h  README.md
src/render/: Buffer.cpp  Buffer.h  ChunkRenderer.cpp  ChunkRenderer.h  CompositeRenderer.cpp  CompositeRenderer.h  EntityRenderer.cpp  EntityRenderer.h  FarTerrainRenderer.cpp  FarTerrainRenderer.h  GpuAllocator.cpp  GpuAllocator.h  LightAtlas.cpp  LightAtlas.h  MeshArena.cpp  MeshArena.h  OffscreenTarget.cpp  OffscreenTarget.h  Pipeline.cpp  Pipeline.h  README.md  Renderer.cpp  Renderer.h  Screenshot.cpp  Screenshot.h  SkyRenderer.cpp  SkyRenderer.h  SpanAllocator.cpp  Swapchain.cpp  Swapchain.h  TextureArray.cpp  TextureArray.h  UiRenderer.cpp  UiRenderer.h  Vertex.h  VulkanContext.cpp  VulkanContext.h  VulkanUtils.cpp  VulkanUtils.h  WorldRenderer.cpp  (+1 more)
src/utilities/: README.md
src/utilities/alloc/: SpanAllocator.cpp  SpanAllocator.h
src/utilities/hash/: Hash.h
src/utilities/noise/: FastNoise.cpp  FastNoise.h  Noise.cpp  Noise.h  NoiseLoad.h  NoiseMask.cpp  NoiseMask.h  NoiseStack.cpp  NoiseStack.h
src/world/: Block.h  BlockRegistry.cpp  BlockRegistry.h  Chunk.h  ChunkMesher.cpp  ChunkMesher.h  Feature.cpp  Feature.h  FeatureScatter.h  Hash.h  Landforms.h  Noise.cpp  Noise.h  NoiseLoad.h  NoiseMask.cpp  NoiseMask.h  NoiseStack.cpp  NoiseStack.h  README.md  Raycast.cpp  Raycast.h  Sdf.h  Shape.cpp  Shape.h  Structure.cpp  Structure.h  SurfaceNets.cpp  SurfaceNets.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h  WorldConfig.cpp  WorldConfig.h
tests/: span_allocator_test.cpp
tools/: README.md  biome_tool.py  deploy-models.cmd  deploy-models.sh  feature_tool.py  gen_critter_model.py  gen_tool_models.py  genmap_tool.py  hub.cmd  hub.py  hub.sh  liquid_tool.py  particle_tool.py  recipe_tool.py  run-editor.cmd  run-editor.sh  structure_tool.py  terrain3d.py  worldgen_tool.py
tools/codeindex/: codeindex.py  verify_comments.py
